
[tool.poetry]
name = "url_reputation_agent"
version = "1.0"
description = "Agent module of url reputation provider service"
authors = ["Braj K <braj.120@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[tool.poetry.scripts]
my-script = "my_module:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
